--- a/src/pages/flight/list/list.scss
+++ b/src/pages/flight/list/list.scss
@@ -43,13 +43,13 @@
       line-height: 52px;
     }
   }
-  
+
   #flight-list {
     height: 100%;
     padding-top: 114px;
     box-sizing: border-box;
   }
-  
+
   .flight-scroll-list {
     width: 100vw;
     height: 100%;
@@ -186,3 +186,6 @@
   }
 }
 
+.color-red {
+  color: rgb(248, 70, 70);
+}
